--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,35 +20,41 @@ const socialMedia = [
 ];
 ---
 
-<Layout title="Andka is xirf, welcome to my home" description="Andika Nur Pratama, a student in Informatics Engineering, technology is my passion and dreaming about a better world with it and making it happen is a dream come true. I am generally into web dev things but over the past few month I have begun learning about android dev using kotlin if you are interested, you can visit my projects here. Ouside coding, I often spend my time playing some non-serious games, watching animes and reading manga if you have any recommendations please don't hesitate to suggest them. I live in Magetan, East Java so in case you're around don't hesitate to contact me, perhaps we'll grab some coffee or do some collaboration.">
-	<div class=" flex items-center justify-center min-h-70vh p-12">
-		<div class=" w-full grid gap-6 max-w-xl slide-enter-content			">
+<Layout
+	title="Andka is xirf, welcome to my home"
+	description="Andika Nur Pratama, a student in Informatics Engineering, technology is my passion and dreaming about a better world with it and making it happen is a dream come true. I am generally into web dev things but over the past few month I have begun learning about android dev using kotlin if you are interested, you can visit my projects here. Ouside coding, I often spend my time playing some non-serious games, watching animes and reading manga if you have any recommendations please don't hesitate to suggest them. I live in Magetan, East Java so in case you're around don't hesitate to contact me, perhaps we'll grab some coffee or do some collaboration.">
+	<div class="flex items-center justify-center min-h-70vh p-12">
+		<div class="w-full grid gap-3 max-w-xl slide-enter-content">
+			<h1 class="dark:text-#e5e7eb text-4xl font-bold item">
+				Andka<span class="text-sm font-normal opacity-75">or <span class="bold underline">Xirf</span></span>
+			</h1>
 			<div>
-				<h1 class=" dark:text-#e5e7eb text-4xl font-bold item">Xirf</h1>
+				<p>Hi, I am Andika Nur Pratama</p>
+				<p>Currently a student in Informatics Engineering.</p>
 			</div>
-			<div class=" text-sm grid gap-3">
-				<div>
-					<p>Hi, I am Andika Nur Pratama</p>
-					<p>Currently a student in Informatics Engineering.</p>
-				</div>
-				<p>
-					Technology is my passion and dreaming about a better world with it and making it happen is a dream come true. I am generally into
-					web dev things but over the past few month I have begun learning about android dev using kotlin if you are interested, you can
-					visit my <a href="/projects" class=" font-bold underline">projects here</a>.
-				</p>
-				<p>
-					Ouside coding, I often spend my time playing some non-serious games, watching animes and reading manga if you have any
-					recommendations please don't hesitate to suggest them. I live in Magetan, East Java so in case you're around don't hesitate to
-					contact me, perhaps we'll grab some coffee or do some collaboration.
-				</p>
-			</div>
-			<div class=" w-20 h-1px bg-gray opacity-50 mx-auto mt-2"></div>
-			<div class=" text-sm">
+			<p>
+				Technology is my passion and dreaming about a better world with it and making it happen is a dream come true. I am generally into web
+				dev things but over the past few month I have begun learning about android dev using kotlin if you are interested, you can visit my <a
+					href="/projects"
+					class="font-bold underline">projects here</a
+				>.
+			</p>
+			<p>
+				Ouside coding, I often spend my time playing some non-serious games, watching animes and reading manga if you have any recommendations
+				please don't hesitate to suggest them. I live in Magetan, East Java so in case you're around don't hesitate to contact me, perhaps
+				we'll grab some coffee or do some collaboration.
+			</p>
+			<div class="w-20 h-1px bg-gray opacity-50 mx-auto mt-2"></div>
+			<div class="text-sm">
 				<p>Find me on</p>
-				<div class=" flex items-start justify-start gap-4 mt-2">
+				<div class="flex items-start justify-start gap-4 mt-2">
 					{
 						socialMedia.map((url) => (
-							<a href={url.link} class=" flex items-center justify-center gap-2" target="_blank" rel="noopener noreferrer">
+							<a
+								href={url.link}
+								class="bg-#8881 rounded-md p-2 flex items-center justify-center gap-2 transition-all duration-300 ease-in-out hover:(opacity-100 bg-#8882) opacity-90"
+								target="_blank"
+								rel="external nofollow noopener noreferrer">
 								<span class:list={[url.icon, "inline-block", "w-4", "h-4"]} />
 								{url.name}
 							</a>
