--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -169,10 +169,10 @@ const { title, description, image = "/images/screenshot-dark.png" } = Astro.prop
 
 	.prose :where(pre, code):not(:where(.not-prose, .not-prose *)) {
 		border-radius: 8px;
-		background-color: hsl(224, 10%, 23%);
-		margin-block: -0.125rem;
-		padding: 0.125rem 0.375rem;
-	}
+		background-color: #353841;
+		padding: 0.125rem;
+		margin: 0 0.125rem;
+	}	
 
 	.prose :where(:not(pre) > code):not(:where(.not-prose, .not-prose *))::before,
 	.prose :where(:not(pre) > code):not(:where(.not-prose, .not-prose *))::after {
