--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,20 @@
 
 ---
 
-<footer class="py-4">
-	<p class="px4 text-xs text-center">
-		<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">CC BY-NC-SA 4.0 ➚</a>  2023-PRESENT © Andka | <a href="/privacy " class="underline">Privacy Policy</a> | <a href="https://status.andka.my.id/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Status ➚</a>
+<footer class="py-4 px4 text-xs text-center slide-enter-content">
+	<p style="--enter-stage: 10 !important;">
+		<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">CC BY-NC-SA 4.0</a>  2023-PRESENT © Andka | <a href="/privacy " class="underline">Privacy Policy</a> | <a href="/disclaimer" class="uderline">Disclaimer</a> | <a href="https://status.andka.my.id/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Status</a>
+	</p>
+
+	{/* ===========================================================================
+	  * Dear folks, please don't remove or edit this part. It's a way to support me.
+	  * This will help me to continue developing and maintaining this project.
+	  * Thanks for your support! 🙏
+	  * 
+	  * ANDKA - https://github.com/xirf
+	  * ===========================================================================
+	  */}
+	<p style="--enter-stage: 11 !important;">
+		Produdly created by <a href="https://github.com/xirf" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Xirf</a> and Powered by <a href="https://astro.build" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Astro</a>, <a href="https://unocss.dev/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">UnoCSS</a> 
 	</p>
 </footer>
