--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,20 +8,33 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 
 <Layout title="Andka projects, take a look at my projects" description="Here are some of the projects that i have done or work on.">
 	<div class="flex min-h-screen p-12 max-w-6xl mx-auto relative">
-		<main class="w-full flex flex-col gap-6 slide-enter-content">
-			<h1 class="text-center font-lexend text-3xl font-bold dark:text-#e5e7eb">Projects</h1>
-			<p class="text-center">Thing that i have done or work on</p>
-			<div class="flex flex-col gap-16">
+		<main class="w-full flex flex-col gap-6">
+			<div class="w-full flex flex-col gap-6 slide-enter-content">
+				<h1 class="text-center font-lexend text-3xl font-bold dark:text-#e5e7eb">Projects</h1>
+				<p class="text-center">Thing that i have done or work on</p>
+			</div>
+			<div class="flex flex-col gap-16" style={`--enter-stage: 0 !important;`}>
 				{
-					projectKeys.map((key) => {
+					projectKeys.map((key, keyIndex: number) => {
 						const _projects = projects[key] as unknown as Project[];
+						let prevProjectLength = 0;
+
+						if (keyIndex > 0) {
+							prevProjectLength = projectKeys
+								.slice(0, keyIndex)
+								.map((k) => projects[k].length)
+								.reduce((acc, curr) => acc + curr);
+						}
+
 						return (
 							<div class="flex flex-col gap-4 relative pt-8">
-								<h2 class="absolute text-6xl top-0 left-0 font-mono stroke-blueGray dark:(text-d-base) text-l-base opacity-20 font-bold capitalize -z-1 text-stroke">
-									{key}
+								<h2 class="absolute text-6xl top-0 left-0 font-mono stroke-blueGray dark:(text-d-base) text-l-base opacity-20 font-bold capitalize -z-1 text-stroke slide-enter-content">
+									<div style={`--enter-stage: ${prevProjectLength  + 2} !important;`}>
+										{key}
+									</div>
 								</h2>
-								<div class=" grid sm:grid-cols-2 md:grid-cols-3 gap-3">
-									{_projects.map((p: Project) => {
+								<div class=" grid sm:grid-cols-2 md:grid-cols-3 gap-3 slide-enter-content">
+									{_projects.map((p: Project, projectIndex) => {
 										const pContent = (
 											<>
 												<div class="mouses absolute w-10 h-10 blur-3xl dark:(bg-white) bg-black" style="display: none;" />
@@ -43,15 +56,18 @@ const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 										const className =
 											"relative duration-500 ease-in-out transition-all flex items-center opacity-75 rounded-md overflow-hidden py-2 px-4 hover:(opacity-100) project-items";
 
+										const animationOffset = `--enter-stage: ${prevProjectLength + projectIndex + 5} !important;`;
+
 										return p.url ? (
-											<a href={p.url} target="_blank" class={className}>
+											<a href={p.url} target="_blank" class={className} style={animationOffset}>
 												{pContent}
 											</a>
 										) : (
-											<div class:list={[className, "cursor-not-allowed"]}>{pContent}</div>
+											<div class:list={[className, "cursor-not-allowed"]} style={animationOffset}>
+												{pContent}
+											</div>
 										);
 									})}
-									
 								</div>
 							</div>
 						);
