--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const socialMedia = [
 	<div class="flex items-center justify-center min-h-70vh p-12">
 		<div class="w-full grid gap-3 max-w-xl slide-enter-content">
 			<h1 class="dark:text-#e5e7eb text-4xl font-bold item">
-				Andka<span class="text-sm font-normal opacity-75">or <span class="bold underline">Xirf</span></span>
+				Andka<span class="text-sm font-normal opacity-75 ml-1">or <span class="bold underline">Xirf</span></span>
 			</h1>
 			<div>
 				<p>Hi, I am Andika Nur Pratama</p>
@@ -52,7 +52,7 @@ const socialMedia = [
 						socialMedia.map((url) => (
 							<a
 								href={url.link}
-								class="bg-#8881 rounded-md p-2 flex items-center justify-center gap-2 transition-all duration-300 ease-in-out hover:(opacity-100 bg-#8882) opacity-90"
+								class="btn-normal flex items-center justify-center gap-2 transition-all duration-300 ease-in-out hover:(opacity-100 bg-#8882) opacity-90"
 								target="_blank"
 								rel="external nofollow noopener noreferrer">
 								<span class:list={[url.icon, "inline-block", "w-4", "h-4"]} />
