--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,7 @@ import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import type { MarkdownHeading } from "astro";
 import Layout from "./Layout.astro";
+import { Image } from "astro:assets";
 
 type Props = CollectionEntry<"blog">["data"] & { headings: MarkdownHeading[] };
 
@@ -10,28 +11,13 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 ---
 
 <Layout title={title} description={description} image={heroImage || undefined}>
-	<div class="relative">
-		<nav class="fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
-			<div class="i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
-			<ul
-				class="flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out">
-				{
-					headings.map((heading) => (
-						<li>
-							<a href={`#${heading.slug}`} class=" opacity-75 hover:opacity-100 transition-all duration-500 ease-in-out">
-								{heading.text}
-							</a>
-						</li>
-					))
-				}
-			</ul>
-		</nav>
+	<div class="relative" id="top">
 		<div class="px-8">
 			<article class="max-w-3xl m-auto prose slide-enter-content pb32">
 				<div class="mb-8">
 					<h1 class="text-5xl font-bold mb-4">{title}</h1>
 					<div>
-						{pubDate && (<FormattedDate date={pubDate} />)}
+						{pubDate && <FormattedDate date={pubDate} />}
 						{
 							updatedDate && (
 								<div>
@@ -40,11 +26,32 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 							)
 						}
 					</div>
+					<Image 
+					src={heroImage} 
+					alt={title} 
+					inferSize
+					class="rounded-lg mt-8 bg-gray-4 shimmer" />
 				</div>
+				<nav class="fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
+					<div class="i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
+					<ul
+						class="flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out z-90">
+						{
+							headings.map((heading) => (
+								<li>
+									<a href={`#${heading.slug}`} class=" opacity-75 hover:opacity-100 transition-all duration-500 ease-in-out">
+										{heading.text}
+									</a>
+								</li>
+							))
+						}
+					</ul>
+				</nav>
 				<slot />
 			</article>
 		</div>
 	</div>
+	<a href="#top" id="back-to-top" class="fixed bottom-4 right-4 m-4 i-solar-alt-arrow-up-bold w8 h8"> </a>
 </Layout>
 
 <style is:global>
