--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,18 +26,20 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 							)
 						}
 					</div>
-					<Image 
-					src={heroImage} 
-					alt={title} 
-					inferSize
-					class="rounded-lg mt-8 bg-gray-4 shimmer" />
+					<div class="w-full h-fit object-c">
+						<Image 
+						src={heroImage} 
+						alt={"Thumbnail for " +title} 
+						inferSize
+						class="rounded-lg mt-8 shimmer w-full h-auto" />
+					</div>
 				</div>
 				<nav class="fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
 					<div class="i-myna-list w8 h8 self-end opacity-75 group-hover:opacity-100 ease-in-out duration-500"></div>
 					<ul
 						class="flex justify-center space-x-4 flex-col text-right w-full opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out z-90">
 						{
-							headings.map((heading) => (
+							headings.map((heading: MarkdownHeading) => (
 								<li>
 									<a href={`#${heading.slug}`} class=" opacity-75 hover:opacity-100 transition-all duration-500 ease-in-out">
 										{heading.text}
