--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,11 +3,18 @@ import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import type { MarkdownHeading } from "astro";
 import Layout from "./Layout.astro";
-import { Image } from "astro:assets";
+import { getImage, Image } from "astro:assets";
 
 type Props = CollectionEntry<"blog">["data"] & { headings: MarkdownHeading[] };
 
 const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.props;
+
+const thumbnail = await getImage({
+	 	src: heroImage,
+	  	format: "webp",
+		width: 800,
+		inferSize: true,
+	 });
 ---
 
 <Layout title={title} description={description} image={heroImage || undefined}>
@@ -27,11 +34,13 @@ const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.
 						}
 					</div>
 					<div class="w-full h-fit object-c">
-						<Image 
-						src={heroImage} 
-						alt={"Thumbnail for " +title} 
-						inferSize
-						class="rounded-lg mt-8 shimmer w-full h-auto" />
+						<img
+							src={thumbnail.src} 
+							srcset={thumbnail.srcSet.values.join(", ")}
+							alt={"Thumbnail for " + title} 
+							width={thumbnail.attributes.width}
+							height={thumbnail.attributes.height}
+							class="rounded-lg mt-8 shimmer w-full h-auto" />
 					</div>
 				</div>
 				<nav class="fixed top-16 right-8 h-screen w-25% flex-col group hidden xl:flex">
