--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,10 +7,15 @@ import { getImage, Image } from "astro:assets";
 
 type Props = CollectionEntry<"blog">["data"] & { headings: MarkdownHeading[] };
 
-const { title, description, pubDate, updatedDate, heroImage, headings } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, headings, hasMath } = Astro.props;
+
+
 ---
 
 <Layout title={title} description={description} image={heroImage || undefined}>
+	{
+		hasMath && <link rel="stylesheet" href="/katex.css" />
+	}
 	<div class="relative" id="top">
 		<div class="px-8">
 			<article class="max-w-3xl m-auto prose slide-enter-content pb32">
