--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -183,6 +183,10 @@
     background-image: linear-gradient(-45deg, #232634 40%, #303446 50%, #232634 60%);
 }
 
+.math-inline svg {
+    display: inline !important;
+}
+
 @keyframes shimmer {
     from {
         background-position-x: -50%;
