--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="py-4 px4 text-xs text-center slide-enter-content">
+<footer class="py-4 px4 text-xs text-center slide-enter-content pb32">
 	<p style="--enter-stage: 10 !important;">
 		<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">CC BY-NC-SA 4.0</a>  2023-PRESENT © Andka | <a href="/privacy " class="underline">Privacy Policy</a> | <a href="/disclaimer" class="underline">Disclaimer</a> | <a href="https://status.andka.my.id/" target="_blank" rel="external nofollow noopener noreferrer" class="underline">Status</a>
 	</p>
