--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-export const prerender = true;
+export const prerender = false;
 ---
 
 <Layout title="Woops, looks like you're lost" description="The page you're looking for doesn't exist.">
