--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,17 +20,17 @@ function getAtIndex(index: number) {
 	};
 }
 
-function getExcerpt(html: string, wordCount = 100): string {
+function getExcerpt(html: string, sentences = 1): string {
 	if (!html) return "";
 
 	const plainText = html.replace(/<[^>]*>/g, " ");
 
 	const cleanText = plainText.replace(/\s+/g, " ").trim();
 
-	const words = cleanText.split(" ");
-	const excerpt = words.slice(0, wordCount).join(" ");
+	const words = cleanText.split(".");
+	const excerpt = words.slice(0, sentences).join(".");
 
-	return words.length > wordCount ? `${excerpt}...` : excerpt;
+	return excerpt.trim();
 }
 
 if (!post || !post.rendered) {
@@ -43,17 +43,20 @@ const pageData = {
 		thumbnail: post.data.properties.thumbnail,
 		title: post.data.properties.Name,
 		slug: post.data.properties.slug,
-		description: getExcerpt(post.rendered.html, 100),
+		description: getExcerpt(post.rendered.html, 1),
 		pubDate: new Date(post.data.properties.created_at.date?.start || new Date()),
 		headings: post.rendered.metadata?.headings,
+		credit: post.data.properties.credit,
 		tags: post.data.properties.tags,
 	},
 	numOfPost,
 	params,
 	postIndex,
 };
-const prevPost = postIndex > 0 ? getAtIndex(postIndex - 1) : null;
-const nextPost = postIndex < numOfPost - 1 ? getAtIndex(postIndex + 1) : null;
+const prevPost = getAtIndex(postIndex);
+const nextPost = getAtIndex(postIndex);
+// const prevPost = postIndex > 0 ? getAtIndex(postIndex - 1) : null;
+// const nextPost = postIndex < numOfPost - 1 ? getAtIndex(postIndex + 1) : null;
 
 const { Content } = await render(post);
 ---
@@ -63,10 +66,10 @@ const { Content } = await render(post);
 	thumbnail={pageData.post.thumbnail!}
 	pubDate={pageData.post.pubDate}
 	description={pageData.post.description}
+	caption={pageData.post.credit}
 	headings={pageData.post.headings as MarkdownHeading[]}>
 	<Content />
-	<hr class="w-20 mx-auto px-10vw bg-gray h-1px opacity50" />
-
+	
 	<div class="grid gap-2">
 		<div>
 			<p>Tags:</p>
@@ -80,8 +83,15 @@ const { Content } = await render(post);
 				}
 			</div>
 		</div>
-		<!-- prev home and next -->
-		<div class="grid grid-cols-3 gap-2">
+		<hr class="w-20 mx-auto px-10vw bg-gray h-1px opacity50" />
+		
+		<a
+			href="/blog">
+			<span class="inline-flex opacity50 items-center lg:justify-end gap-2 mt-4">
+				<i class="i-myna-chevron-double-left" /> Back to Blog
+			</span>
+		</a>
+		<div class="grid lg:grid-cols-2 gap-2 mt-2">
 			<div>
 				{
 					prevPost && (
@@ -97,11 +107,6 @@ const { Content } = await render(post);
 				}
 			</div>
 
-			<a
-				href="/blog"
-				class="bg-#30344600 decoration-none opacity-75 hover:(opacity-100 bg-#30344620) rounded-md transition-all duration-300 ease-in-out flex flex-col gap-2 p-4 flex items-center justify-center">
-				<span>Back to Blog</span>
-			</a>
 			<div>
 				{
 					nextPost && (
