--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,11 @@ const links = [
 		label: "Projects",
 		icon: "i-myna-sparkles",
 	},
+	{
+		href: "https://blog.mryoga.my.id",
+		label: "Notes",
+		icon: "i-myna-book",
+	},
 ];
 
 const iconLinks = [
