feat(tampilkan): menampilkan halaman lain diweb ini

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,11 @@ const links = [
 		label: "Notes",
 		icon: "i-myna-book",
 	},
+	{
+		href: "/show",
+		label: "Viewer",
+		icon: "i-myna-book",
+	},
 ];
 
 const iconLinks = [
